--- a/style.css
+++ b/style.css
@@ -24,6 +24,17 @@ body {
   background-image: url('images/backgrounds/sea-bg.png');
 }
 
+#stats {
+  width: 198px;
+  height: 50px;
+  float: left;
+  margin-top: 10px;
+  margin-left: 10px;
+  background-color: #BFBFBF;
+  font-size: 7pt;
+  text-align: left;
+}
+
 #menu_main {
   width: 300px;
   height: 62px;
