--- a/style.css
+++ b/style.css
@@ -65,10 +65,10 @@ body {
   background-color: #000000;
 }
 
-#terminal {
+#stdout {
   position: relative;
   width: 500px;
-  height: 150px;
+  height: 100px;
   border: 1px solid #000000;
   margin-top: 10px;
   margin-left: auto;
@@ -78,4 +78,10 @@ body {
   color: #FFFFFF;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+#stdin {
+  width: 500px;
+  margin-top: 5px;
+  height: 75px;
 }
