--- a/style.css
+++ b/style.css
@@ -1,9 +1,55 @@
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   margin: 0px;
   padding: 0px;
   text-align: center;
   font-family: Arial;
   font-size: 10pt;
+  background-image: url('images/backgrounds/sea-bg.png');
+}
+
+#globalheader {
+  position: absolute;
+  top: -20px;
+  left: 0px;
+  z-index: 200;
+  width: 100%;
+  margin-top: 0px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color:rgba(17,17,17,0.5);
+  text-align: left;
+  color: #0090B0;
+  text-shadow: 3px 3px 3px #888888;
+  border-bottom: 2px solid #0090B0;
+  font-family: Arial;
+  font-size: 10pt;
+}
+
+#globalheader:hover {
+  top: 0px;
+  height: 30px;
+}
+
+#globalheader a, #globalheader a:link, #globalheader a:visited {
+  color: #FFFFFF;
+  text-shadow: 1px 1px 1px #888888;
+  text-decoration: none;
+}
+
+#globalheader a:hover {
+  color: #0090B0;
+  text-shadow: 1px 1px 1px #888888;
+  text-decoration: none;
 }
 
 #output a, #output a:link, #output a:visited {
@@ -12,16 +58,6 @@ body {
 
 #output a:hover {
   color: #999999;
-}
-
-#window {
-  position: relative;
-  width: 500px;
-  height: 300px;
-  border: 1px solid #000000;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: url('images/backgrounds/sea-bg.png');
 }
 
 #menu_side {
@@ -37,6 +73,10 @@ body {
 }
 
 #menu_main {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 200;
   width: 300px;
   height: 62px;
   margin-top: 10px;
@@ -59,9 +99,8 @@ body {
 }
 
 #map {
-  float: right;
-  margin-top: 10px;
-  margin-right: 10px;
+  width: 100%;
+  height: 100%;
   background-color: #000000;
 }
 
