--- a/style.css
+++ b/style.css
@@ -11,46 +11,29 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  text-align: center;
-  font-family: Arial;
-  font-size: 10pt;
+  font-family: "Times New Roman", Serif;
+  font-size: 100%;
   background-image: url('images/backgrounds/sea-bg.png');
 }
 
 #globalheader {
+  margin-bottom: 0px;
+}
+
+#tray {
   position: absolute;
-  top: -20px;
+  bottom: -15px;
   z-index: 200;
   width: 100%;
   height: 20px;
-  margin-top: 0px;
-  padding-top: 5px;
-  padding-bottom: 5px;
   background-color:rgba(17,17,17,0.5);
-  text-align: left;
-  color: #0090B0;
-  text-shadow: 3px 3px 3px #888888;
-  border-bottom: 2px solid #0090B0;
-  font-family: Arial;
-  font-size: 10pt;
   overflow: hidden;
+  border-top: 2px solid #0090B0;
 }
 
-#globalheader:hover {
-  top: 0px;
+#tray:hover {
+  bottom: 0px;
   height: auto;
-}
-
-#globalheader a, #globalheader a:link, #globalheader a:visited {
-  color: #FFFFFF;
-  text-shadow: 1px 1px 1px #888888;
-  text-decoration: none;
-}
-
-#globalheader a:hover {
-  color: #0090B0;
-  text-shadow: 1px 1px 1px #888888;
-  text-decoration: none;
 }
 
 #output a, #output a:link, #output a:visited {
@@ -106,7 +89,7 @@ body {
 }
 
 #stdout {
-  width: 500px;
+  width: 550px;
   height: 100px;
   border: 1px solid #000000;
   margin-top: 10px;
@@ -119,7 +102,7 @@ body {
 }
 
 textarea.stdin {
-  width: 500px;
+  width: 550px;
   height: 75px;
   margin-left: 10px;
 }
